<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.sanyue.pulsar.function</groupId>
    <artifactId>pulsar-function-demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>pulsar-function-demo</name>
    <description>pulsar-function-demo</description>
    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
<!--        <dependency>-->
<!--            <groupId>org.projectlombok</groupId>-->
<!--            <artifactId>lombok</artifactId>-->
<!--            <version>0.10.1</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.28</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.28</version>
        </dependency>



<!--        <dependency>-->
<!--            <groupId>org.apache.pulsar</groupId>-->
<!--            <artifactId>pulsar-functions-api</artifactId>-->
<!--            <version>2.9.2</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.apache.pulsar</groupId>
            <artifactId>pulsar-functions-api</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.pulsar</groupId>
            <artifactId>pulsar-functions-local-runner-original</artifactId>
            <version>2.5.0</version>
        </dependency>

    </dependencies>

<!--    <build>-->
<!--        <plugins>-->
<!--            <plugin>-->
<!--                <artifactId>maven-assembly-plugin</artifactId>-->
<!--                <configuration>-->
<!--                    <appendAssemblyId>false</appendAssemblyId>-->
<!--                    <descriptorRefs>-->
<!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--                    </descriptorRefs>-->
<!--                    <archive>-->
<!--                        <manifest>-->
<!--                            <mainClass>com.sanyue.pulsar.function.pulsarfunctiondemo.ExclamationFunction</mainClass>-->
<!--                        </manifest>-->
<!--                    </archive>-->
<!--                </configuration>-->
<!--                &lt;!&ndash;                <executions>&ndash;&gt;-->
<!--                &lt;!&ndash;                    <execution>&ndash;&gt;-->
<!--                &lt;!&ndash;                        <id>make-assembly</id>&ndash;&gt;-->
<!--                &lt;!&ndash;                        <phase>package</phase>&ndash;&gt;-->
<!--                &lt;!&ndash;                        <goals>&ndash;&gt;-->
<!--                &lt;!&ndash;                            <goal>assembly</goal>&ndash;&gt;-->
<!--                &lt;!&ndash;                        </goals>&ndash;&gt;-->
<!--                &lt;!&ndash;                    </execution>&ndash;&gt;-->
<!--                &lt;!&ndash;                </executions>&ndash;&gt;-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-compiler-plugin</artifactId>-->
<!--                <configuration>-->
<!--                    <source>8</source>-->
<!--                    <target>8</target>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--        </plugins>-->
<!--    </build>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED,
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/sun.net=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
